# spiderman

./: .gitignore  LICENSE.rst  LmodPackage.hs  Lmodulator.hs  Lmodulus.hs  Main.hs  Makefile  MasXml.hs  Paths_spiderman.hs  README.rst  SoftwarePage.hs  SoftwarePageTemplate.hs  SoftwarePages.hs  SpiderMan.hs  dockerfile  lmodulator.cabal  lmodulus.cabal  noddy.hs  runspider.sh  spiderman.cabal  spiderman.sh
data/css/: custom.css  screen.css
data/examples/: genpages.sh  runspider.sh
data/templates/: content.hamlet  content.st  footer.hamlet  header.hamlet  help.hamlet  helppage.hamlet  listing_page.st  listing_row.st  logo.hamlet  package.st  packages.hamlet  page.hamlet  page.st  sitenav.hamlet  tablerow.st  versions.hamlet
examples/: generate_software_pages.sh  genpages.sh  lmod.json  runspider.sh  template.lua
templates/: header.hamlet  help.hamlet  logo.hamlet  packages.hamlet  page.hamlet  sitenav.hamlet  versions.hamlet
