-- 
-- jonas.juselius@uito.no 2013
-- 

name:                spiderman
version:             1.1.0.0
synopsis:            Lmod to software page
description:         Generate web pages from Lmod package json
homepage:            https://github.com/bakerjonas/spiderman 
license:             OtherLicense
license-file:        LICENSE.rst
author:              Jonas Juselius
maintainer:          jonas.juselius@uit.no
copyright:           Jonas Juselius
category:            Web
build-type:          Simple
cabal-version:       >=1.8

extra-source-files: README.rst
data-dir:           data
data-files:         img/*.png, img/icons/*.png
                    css/*.css

library 
  exposed-modules:   
    LmodPackage,
    SoftwarePages
    MasXml
  other-modules: Paths_spiderman
  build-depends:     
    base 
    , filepath
    , aeson 
    , unordered-containers 
    , bytestring 
    , text 
    , vector 
    , blaze-html
    , blaze-markup
    , pandoc
    , xmlgen
    , hamlet
    , regex-posix

executable spiderman
  main-is:       SpiderMan.hs 
  other-modules: Paths_spiderman
  build-depends:       
    base 
    , aeson 
    , unordered-containers 
    , bytestring 
    , text 
    , vector 
    , cmdargs
    , directory
    , blaze-html
    , blaze-markup
    , filepath
    , pandoc
    , xmlgen
    , hamlet
    , regex-posix
  cpp-options: -DCABAL_BUILD

